[package]
name = "hac"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/alvaro-sch/hac"
documentation = "https://docs.rs/hac/"
keywords = ["hpc", "gpgpu"]
authors = ["Alvaro <alvarolegit@gmail.com>"]
description = "Hardware Accelerated Computing API for portable high performace computing with the GPU."

[dependencies]
bytemuck = "1.12.3"
pollster = "0.2.5"
image = { version = "0.24.5", default-features = false, optional = true }
wgpu = "0.15.1"

[dev-dependencies]
rand = "0.8.5"
image = "0.24.5"

[features]
default = []
from_image = ["dep:image"]

[[example]]
name = "simple_image_filter"
required-features = ["from_image"]

[[example]]
name = "gaussian_blur"
required-features = ["from_image"]
